src/tests/ci/assignment_3_arrays_io_llvm/valid/01_comments.c
int main() {
    // this is a line comment
    int x = 5;

    /*
       this is a block comment
    */
    return x;
}
