src/tests/ci/assignment_3_arrays_io_llvm/invalid_semantic/07_scanf_without_stdio.c
int main() {
    int x;
    scanf("%d", &x);
    return 0;
}
